新增購物車頁面

--- a/stylesheets/helpers/_drive.scss
+++ b/stylesheets/helpers/_drive.scss
@@ -60,6 +60,10 @@ $assist: #f7da7d;
   .drive-img {
     height: 280px;
   }
+  .price {
+    border-top: 1px solid #EAF0ED;
+    margin-top: 15px;
+  }
 }
 @media (max-width: 576px) {
   .scheduled-img {
