--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -14417,6 +14417,10 @@ a.text-assist:hover, a.text-assist:focus {
   .drive-img {
     height: 280px;
   }
+  .price {
+    border-top: 1px solid #EAF0ED;
+    margin-top: 15px;
+  }
 }
 
 @media (max-width: 576px) {
