--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -5,4 +5,7 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-@import './helpers/drive';
+@import './helpers/index';
+@import './helpers/products';
+@import './helpers/login';
+@import './helpers/carts';
