--- a/stylesheets/helpers/_index.scss
+++ b/stylesheets/helpers/_index.scss
@@ -1,5 +1,13 @@
 $primary: #3f4a5d;
 $assist: #f7da7d;
+.logo {
+  width: 170px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
+}
 .drive-img {
   height: 580px;
 }
@@ -25,6 +33,9 @@ $assist: #f7da7d;
 .scheduled-img {
   min-height: 320px;
 }
+.scheduled .list-group-item {
+  border-bottom: 1px solid $aid;
+}
 .box-shadow {
   &:hover {
     box-shadow: 1px 3px 5px rgba(48, 47, 47, 0.226);
@@ -34,35 +45,12 @@ $assist: #f7da7d;
   margin-top: -30px;
 }
 
-.community-link {
-  position: relative;
-}
-.community-link::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-
-  width: 60px;
-  height: 3px;
-  transform: translateX(-110%);
-  background-color: #3f4a5d;
-}
-.community-link::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 60px;
-  height: 3px;
-  transform: translateX(10%);
-  background-color: #3f4a5d;
-}
 @media (max-width: 767px) {
+  .logo {
+    width: 120px;
+  }
   .drive-img {
     height: 280px;
-  }
-  .price {
-    border-top: 1px solid #EAF0ED;
-    margin-top: 15px;
   }
 }
 @media (max-width: 576px) {
