--- a/stylesheets/helpers/_variables.scss
+++ b/stylesheets/helpers/_variables.scss
@@ -65,6 +65,8 @@ $colors: map-merge(
 );
 
 $primary:   #3f4a5d;//$blue !default;
+$assist: #f7da7d;
+$aid: #eaecf0;
 $secondary: $gray-600 !default;
 $success: $green !default;
 $info: $cyan !default;
@@ -1071,8 +1073,8 @@ $list-group-item-padding-y: 0.75rem !default;
 $list-group-item-padding-x: 1.25rem !default;
 
 $list-group-hover-bg: $gray-100 !default;
-$list-group-active-color: $component-active-color !default;
-$list-group-active-bg: $component-active-bg !default;
+$list-group-active-color: $primary;//$component-active-color !default;
+$list-group-active-bg: $aid;//$component-active-bg !default;
 $list-group-active-border-color: $list-group-active-bg !default;
 
 $list-group-disabled-color: $gray-600 !default;
