--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -14400,6 +14400,20 @@ a.text-assist:hover, a.text-assist:focus {
   margin-top: -30px;
 }
 
+.special {
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  letter-spacing: 5px;
+  position: absolute;
+  left: 10px;
+}
+
+.box-shadow:hover {
+  -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.24);
+}
+
 @media (max-width: 767px) {
   .logo {
     width: 120px;
