--- a/stylesheets/helpers/_index.scss
+++ b/stylesheets/helpers/_index.scss
@@ -51,6 +51,10 @@ $assist: #f7da7d;
   position: absolute;
   left:  10px;
 }
+.input-row{
+  height: 56px;
+}
+
 @media (max-width: 767px) {
   .logo {
     width: 120px;
