--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -14409,6 +14409,10 @@ a.text-assist:hover, a.text-assist:focus {
   left: 10px;
 }
 
+.input-row {
+  height: 56px;
+}
+
 @media (max-width: 767px) {
   .logo {
     width: 120px;
@@ -14486,5 +14490,124 @@ a.text-assist:hover, a.text-assist:focus {
     border-top: 1px solid #eaf0ed;
     margin-top: 15px;
   }
+}
+
+.process {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.process::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: aliceblue;
+}
+
+.step {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  position: relative;
+  background-color: aliceblue;
+}
+
+.step-success {
+  font-size: 6px;
+  position: absolute;
+  top: 16.666666%;
+  left: 16.666666%;
+  z-index: 3000 !important;
+}
+
+.active::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  position: absolute;
+  top: -16.666666%;
+  left: -16.666666%;
+  border: 1px solid aliceblue;
+}
+
+.nav.nav-dark.nav-pills > .nav-link {
+  border: #eaecf0 1px solid;
+}
+
+.nav.nav-dark .nav-link {
+  color: #eaecf0;
+}
+
+.nav.nav-dark .nav-link.active {
+  background-color: #eaecf0;
+  color: #3f4a5d;
+}
+
+.success-img {
+  height: 496px;
+}
+
+.success-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.pay-success {
+  max-width: 400px;
+}
+
+.pay-success .process {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.pay-success .process::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: #3f4a5d;
+}
+
+.pay-success .step {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  position: relative;
+  background-color: #3f4a5d;
+}
+
+.pay-success .step-success {
+  font-size: 6px;
+  position: absolute;
+  top: 16.666666%;
+  left: 16.666666%;
+  z-index: 3000 !important;
 }
 /*# sourceMappingURL=all.css.map */
