--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -14522,7 +14522,7 @@ a.text-assist:hover, a.text-assist:focus {
 }
 
 .step-success {
-  font-size: 6px;
+  font-size: 50%;
   position: absolute;
   top: 16.666666%;
   left: 16.666666%;
