--- a/stylesheets/helpers/_checkout.scss
+++ b/stylesheets/helpers/_checkout.scss
@@ -20,7 +20,7 @@
   background-color: aliceblue;
 }
 .step-success {
-  font-size: 6px;
+  font-size: 50%;
   position: absolute;
   top: 16.666666%;
   left: 16.666666%;
