--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -14505,12 +14505,12 @@ a.text-assist:hover, a.text-assist:focus {
 .process::after {
   content: "";
   width: 100%;
-  height: 2px;
+  height: 1px;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background-color: aliceblue;
+  background-color: #eaecf0;
 }
 
 .step {
@@ -14518,14 +14518,10 @@ a.text-assist:hover, a.text-assist:focus {
   height: 18px;
   border-radius: 50%;
   position: relative;
-  background-color: aliceblue;
+  background-color: #eaecf0;
 }
 
 .step-success {
-  font-size: 50%;
-  position: absolute;
-  top: 16.666666%;
-  left: 16.666666%;
   z-index: 3 !important;
 }
 
@@ -14537,7 +14533,7 @@ a.text-assist:hover, a.text-assist:focus {
   position: absolute;
   top: -16.666666%;
   left: -16.666666%;
-  border: 1px solid aliceblue;
+  border: 1px solid #eaecf0;
 }
 
 .nav.nav-dark.nav-pills > .nav-link {
