--- a/stylesheets/helpers/_checkout.scss
+++ b/stylesheets/helpers/_checkout.scss
@@ -6,24 +6,20 @@
 .process::after {
   content: "";
   width: 100%;
-  height: 2px;
+  height: 1px;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: aliceblue;
+  background-color: $aid;
 }
 .step {
   width: 18px;
   height: 18px;
   border-radius: 50%;
   position: relative;
-  background-color: aliceblue;
+  background-color: $aid;
 }
 .step-success {
-  font-size: 50%;
-  position: absolute;
-  top: 16.666666%;
-  left: 16.666666%;
   z-index: 3 !important;
 }
 .active::after {
@@ -34,7 +30,7 @@
   position: absolute;
   top: -16.666666%;
   left: -16.666666%;
-  border: 1px solid aliceblue;
+  border: 1px solid $aid;
 }
 
 .nav.nav-dark.nav-pills > .nav-link {
